--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 #Github.com-Vasusen-code
 
 https://github.com/vasusen-code/Telethon/archive/refs/tags/v1.24.0.zip
-#ethon==1.3.8
 cryptg
 tgcrypto
-Pyrogram==2.0.93
+Pyrogram
 psutil
 opencv-python-headless
 python-decouple
